bindings/dart/lib/src/ffi.dart


/// Inverse of picking: where a scene point lands on screen.
final class TesseraScreenPos extends Struct {
  @Bool()
  external bool onscreen;
  @Float()
  external double x; // logical window coords (top-left origin)
  @Float()
  external double y;
  @Float()
  external double depth; // NDC depth 0..1 (0 = near plane)
  @Array(3)
  external Array<Float> world; // world point that was projected
}

// ======================================================================
//  Timing / quality / lighting
// ======================================================================
final class TesseraTiming extends Struct {
  @Float()
  external double moveS;
  @Float()
  external double addS;
  @Float()
  external double removeS;
  @Float()
  external double tileS;
  @Float()
  external double reflowS;
  @Float()
  external double cameraS;
  @Float()
  external double speedMultiplier; // global; default 1.0
}

final class TesseraQuality extends Struct {
  @Int32()
  external int shadows; // TesseraShadowMode
  @Int32()
  external int msaa; // 1, 2, 4
  @Float()
  external double renderScale; // 1.0 = native
}

final class TesseraLight extends Struct {
  @Array(3)
  external Array<Float> dir; // points from light
  @Array(3)
  external Array<Float> color;
  @Float()
  external double intensity;
  @Array(3)
  external Array<Float> ambient;
}

/// enum TesseraProjection { PERSPECTIVE=0, ISOMETRIC=1 }
abstract final class TesseraProjection {
  static const int perspective = 0;
  static const int isometric = 1;
}

final class TesseraFocus extends Struct {
  @Bool()
  external bool enabled;
  @Float()
  external double focusDistance; // <=0 = auto (orbit focus)
  @Float()
  external double focusRange;
  @Float()
  external double blurStrength;
}

// ======================================================================
//  Function typedefs (C signature / Dart signature pairs)
// ======================================================================
typedef _CreateC = Pointer<TesseraEngine> Function(Pointer<TesseraConfig>);
typedef _CreateD = Pointer<TesseraEngine> Function(Pointer<TesseraConfig>);
typedef _DestroyC = Void Function(Pointer<TesseraEngine>);
typedef _DestroyD = void Function(Pointer<TesseraEngine>);
typedef _ResizeC = Void Function(Pointer<TesseraEngine>, Int32, Int32, Float);
typedef _ResizeD = void Function(Pointer<TesseraEngine>, int, int, double);
typedef _TickC = Void Function(Pointer<TesseraEngine>, Double);
typedef _TickD = void Function(Pointer<TesseraEngine>, double);
typedef _EngStrC = Pointer<Utf8> Function(Pointer<TesseraEngine>);
typedef _EngStrD = Pointer<Utf8> Function(Pointer<TesseraEngine>);
typedef _VersionC = Uint32 Function();
typedef _VersionD = int Function();
typedef _VersionStrC = Pointer<Utf8> Function();
typedef _VersionStrD = Pointer<Utf8> Function();

typedef _RegAtlasC = Uint32 Function(Pointer<TesseraEngine>, Pointer<TesseraBytes>);
typedef _RegAtlasD = int Function(Pointer<TesseraEngine>, Pointer<TesseraBytes>);
typedef _RegTileC = Uint32 Function(Pointer<TesseraEngine>, Pointer<TesseraTileDef>);
typedef _RegTileD = int Function(Pointer<TesseraEngine>, Pointer<TesseraTileDef>);
typedef _RegEntityC = Uint32 Function(Pointer<TesseraEngine>, Pointer<TesseraEntityDef>);
typedef _RegEntityD = int Function(Pointer<TesseraEngine>, Pointer<TesseraEntityDef>);
typedef _RegEffectC = Uint32 Function(Pointer<TesseraEngine>, Pointer<TesseraEffectDef>);
typedef _RegEffectD = int Function(Pointer<TesseraEngine>, Pointer<TesseraEffectDef>);
typedef _AnimCountC = Uint32 Function(Pointer<TesseraEngine>, Uint32);
typedef _AnimCountD = int Function(Pointer<TesseraEngine>, int);
typedef _AnimNameC = Pointer<Utf8> Function(Pointer<TesseraEngine>, Uint32, Uint32);
typedef _AnimNameD = Pointer<Utf8> Function(Pointer<TesseraEngine>, int, int);

typedef _RegCardC = Uint32 Function(Pointer<TesseraEngine>, Pointer<TesseraCardDef>);
typedef _RegCardD = int Function(Pointer<TesseraEngine>, Pointer<TesseraCardDef>);
typedef _RegDiceC = Uint32 Function(Pointer<TesseraEngine>, Pointer<TesseraDiceDef>);
typedef _RegDiceD = int Function(Pointer<TesseraEngine>, Pointer<TesseraDiceDef>);
typedef _DiceFaceCountC = Uint32 Function(Pointer<TesseraEngine>, Uint32);
typedef _DiceFaceCountD = int Function(Pointer<TesseraEngine>, int);
typedef _DiceCountC = Uint32 Function(Pointer<TesseraEngine>);
typedef _DiceCountD = int Function(Pointer<TesseraEngine>);
typedef _DiceFaceC = Bool Function(Pointer<TesseraEngine>, Uint64, Pointer<Uint32>);
typedef _DiceFaceD = bool Function(Pointer<TesseraEngine>, int, Pointer<Uint32>);
typedef _DiceAllIdleC = Bool Function(Pointer<TesseraEngine>);
typedef _DiceAllIdleD = bool Function(Pointer<TesseraEngine>);

typedef _SetStateC = Uint64 Function(Pointer<TesseraEngine>, Pointer<TesseraState>);
typedef _SetStateD = int Function(Pointer<TesseraEngine>, Pointer<TesseraState>);
typedef _OpCompletedC = Bool Function(Pointer<TesseraEngine>, Uint64);
typedef _OpCompletedD = bool Function(Pointer<TesseraEngine>, int);
typedef _LastOpC = Uint64 Function(Pointer<TesseraEngine>);
typedef _LastOpD = int Function(Pointer<TesseraEngine>);
/// Native signature of the operation-completed callback: `void(uint64 op,
/// void* user)`. Wrap a Dart closure of this shape in a `NativeCallable` and
/// pass its `nativeFunction` to [Tessera.setOperationCallback].
typedef TesseraOpCompletedNative = Void Function(Uint64, Pointer<Void>);
typedef _SetOpCallbackC = Void Function(
    Pointer<TesseraEngine>, Pointer<NativeFunction<TesseraOpCompletedNative>>, Pointer<Void>);
typedef _SetOpCallbackD = void Function(
    Pointer<TesseraEngine>, Pointer<NativeFunction<TesseraOpCompletedNative>>, Pointer<Void>);
typedef _PickC = Bool Function(Pointer<TesseraEngine>, Float, Float, Pointer<TesseraPick>);
typedef _PickD = bool Function(Pointer<TesseraEngine>, double, double, Pointer<TesseraPick>);
typedef _WorldToScreenC =
    Bool Function(Pointer<TesseraEngine>, Pointer<Float>, Pointer<TesseraScreenPos>);
typedef _WorldToScreenD =
    bool Function(Pointer<TesseraEngine>, Pointer<Float>, Pointer<TesseraScreenPos>);
typedef _EntityScreenC =
    Bool Function(Pointer<TesseraEngine>, Uint64, Pointer<TesseraScreenPos>);
typedef _EntityScreenD =
    bool Function(Pointer<TesseraEngine>, int, Pointer<TesseraScreenPos>);
typedef _TileScreenC =
    Bool Function(Pointer<TesseraEngine>, Uint64, Pointer<TesseraScreenPos>);
typedef _TileScreenD =
    bool Function(Pointer<TesseraEngine>, int, Pointer<TesseraScreenPos>);
typedef _FitDistanceC = Bool Function(Pointer<TesseraEngine>, Pointer<Uint64>, Size,
    Pointer<Uint64>, Size, Float, Pointer<Float>);
typedef _FitDistanceD = bool Function(Pointer<TesseraEngine>, Pointer<Uint64>, int,
    Pointer<Uint64>, int, double, Pointer<Float>);
typedef _SetTimingC = Void Function(Pointer<TesseraEngine>, Pointer<TesseraTiming>);
typedef _SetTimingD = void Function(Pointer<TesseraEngine>, Pointer<TesseraTiming>);
typedef _IsIdleC = Bool Function(Pointer<TesseraEngine>);
typedef _IsIdleD = bool Function(Pointer<TesseraEngine>);
typedef _SetQualityC = Void Function(Pointer<TesseraEngine>, Pointer<TesseraQuality>);
typedef _SetQualityD = void Function(Pointer<TesseraEngine>, Pointer<TesseraQuality>);
typedef _SetLightC = Void Function(Pointer<TesseraEngine>, Pointer<TesseraLight>);
typedef _SetLightD = void Function(Pointer<TesseraEngine>, Pointer<TesseraLight>);
typedef _SetProjectionC = Void Function(Pointer<TesseraEngine>, Int32);
typedef _SetProjectionD = void Function(Pointer<TesseraEngine>, int);
typedef _SetFocusC = Void Function(Pointer<TesseraEngine>, Pointer<TesseraFocus>);
typedef _SetFocusD = void Function(Pointer<TesseraEngine>, Pointer<TesseraFocus>);

typedef _OrbitC = Void Function(Pointer<TesseraEngine>, Float, Float, Float);
typedef _OrbitD = void Function(Pointer<TesseraEngine>, double, double, double);
typedef _CaptureC = Bool Function(Pointer<TesseraEngine>, Int32, Int32, Pointer<Utf8>);
typedef _CaptureD = bool Function(Pointer<TesseraEngine>, int, int, Pointer<Utf8>);
typedef _RenderRgbaC =
    Bool Function(Pointer<TesseraEngine>, Double, Int32, Int32, Pointer<Void>, Size);
typedef _RenderRgbaD =
    bool Function(Pointer<TesseraEngine>, double, int, int, Pointer<Void>, int);

/// Override the directory that holds the engine's `shaders/` folder, read when
/// pipelines are built. Process-global — call BEFORE constructing a [Tessera]
/// (the engine loads shaders in its constructor). Pass "" to restore the
/// compile-time default. Needed on iOS/Android where assets are bundled rather
/// than at the build-time path; a no-op-friendly convenience on desktop.
void tesseraSetAssetDir(String dir, {DynamicLibrary? library, String? libraryPath}) {
  final lib = library ?? openTesseraLibrary(path: libraryPath);
  final fn = lib.lookupFunction<Void Function(Pointer<Utf8>),
      void Function(Pointer<Utf8>)>('tessera_set_asset_dir');
  final p = dir.toNativeUtf8();
  fn(p);
  calloc.free(p);
}

/// High-level Dart wrapper around the C engine. Exposes the FULL public API of
/// `include/tessera.h`.
///
/// Threading (see docs/platforms.md): GPU calls — create/destroy/tick/resize/
/// register*/capturePng — must run on the render (main) thread. setState,
/// setTiming, setLight, setQuality, isIdle and lastError are any-thread.
///
/// Construct once, drive frames with [tick], and always [dispose] when done.
/// The native library is located automatically (see [openTesseraLibrary]); pass
/// [libraryPath] or a pre-opened [library] to override discovery.
class Tessera {
  final DynamicLibrary _lib;
  late final Pointer<TesseraEngine> _engine;

  /// Whether this wrapper owns the engine (created it) and must destroy it on
  /// [dispose]. False for [Tessera.fromHandle], where a host (e.g. a native
  /// platform-view plugin) owns the engine lifecycle.
  final bool _ownsEngine;

  late final _CreateD _create = _lib.lookupFunction<_CreateC, _CreateD>('tessera_create');
  late final _DestroyD _destroy = _lib.lookupFunction<_DestroyC, _DestroyD>('tessera_destroy');
  late final _ResizeD _resize = _lib.lookupFunction<_ResizeC, _ResizeD>('tessera_resize');
  late final _TickD _tick = _lib.lookupFunction<_TickC, _TickD>('tessera_tick');
  late final _EngStrD _lastError = _lib.lookupFunction<_EngStrC, _EngStrD>('tessera_last_error');
  late final _EngStrD _backendName =
      _lib.lookupFunction<_EngStrC, _EngStrD>('tessera_backend_name');
  late final _VersionD _version = _lib.lookupFunction<_VersionC, _VersionD>('tessera_version');
  late final _VersionStrD _versionString =
      _lib.lookupFunction<_VersionStrC, _VersionStrD>('tessera_version_string');

  late final _RegAtlasD _registerAtlas =
      _lib.lookupFunction<_RegAtlasC, _RegAtlasD>('tessera_register_atlas');
  late final _RegTileD _registerTileDef =
      _lib.lookupFunction<_RegTileC, _RegTileD>('tessera_register_tile_def');
  late final _RegEntityD _registerEntityDef =
      _lib.lookupFunction<_RegEntityC, _RegEntityD>('tessera_register_entity_def');
  late final _RegEffectD _registerEffectDef =
      _lib.lookupFunction<_RegEffectC, _RegEffectD>('tessera_register_effect_def');
  late final _AnimCountD _animCount =
      _lib.lookupFunction<_AnimCountC, _AnimCountD>('tessera_entity_def_anim_count');
  late final _AnimNameD _animName =
      _lib.lookupFunction<_AnimNameC, _AnimNameD>('tessera_entity_def_anim_name');
